# vantager-mnhs

./: .gitignore  README.md  extract.py  pyproject.toml
data/: extracted_needles_20241013_132811.csv  extracted_needles_20241013_132811.json
llm/: __init__.py  oai.py
utils/: __init__.py  prompts.py  schemas.py  tools.py
